fixed typing cursor not showing added fade in animation to main page (welcome text) although still needs fixes

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -31,6 +31,7 @@ body{
     display: flex;
     width: 100%;
     height: 100%;
+    padding: 10%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -38,12 +39,13 @@ body{
 .preloaderImg{
     stroke: rgb(255, 255, 255);
     stroke-width: 3px;
+    display: flex;
+    justify-content: center;
     fill-opacity: 0;
-    overflow: hidden;
     stroke-dasharray: 4500;
     animation: draw 4s ease infinite;
-    width: 50%;
     height: 25%;
+    width: 50%;
    
 }
 @keyframes draw{
@@ -155,10 +157,11 @@ body{
     }
    
 }
+.animated-text{
+    display: inline;
+}
 .mainHeader{
    
-    animation: fadeIn;
-    animation-duration: 1s;
     color:white;
     position: absolute;
     font-weight: bolder;
@@ -417,6 +420,24 @@ body{
     
   
     display: block;
+}
+@media screen and (max-height: 720px) {
+    .preloaderImg{
+        height: 30%;
+    }
+    
+}
+@media screen and (max-height: 1080px) and (min-height: 720px){
+    .preloaderImg{
+        height: 15%;
+    }
+    
+}
+@media screen and (min-height: 1080px) {
+    .preloaderImg{
+        height: 10%;
+    }
+    
 }
 @media screen and (max-width:1280px){
    
